fix footer styling on mobile devices

--- a/resources/sass/04-layout/_footer.scss
+++ b/resources/sass/04-layout/_footer.scss
@@ -22,15 +22,34 @@
     }
 }
 
+@media screen and (min-width: 500px) {
+    footer {
+        .footer-navigation {
+            flex-flow: row wrap;
+            justify-content: space-evenly;
+            align-items: baseline;
+        }
+    }
+}
+
+
+@media screen and (max-width: 499px) {
+    footer {
+        .footer-navigation {
+            margin-left: 10vw;
+            flex-flow: column wrap;
+            align-items: baseline;
+            justify-content: left;
+        }
+    }
+}
+
 footer {
     background-color: $secondary; //#ba935a;
 
     .footer-navigation {
         padding: $space-m $space-s $space-xl;
         display: flex;
-        flex-flow: row wrap;
-        justify-content: space-evenly;
-        align-items: baseline;
         gap: 1rem;
 
         h6 {
